--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 		<tr>
 			<td>
 				<img src="jsgi.png" alt="Solange">
-			</td>
+			</td> 
+		</tr>
+		
+		<tr>
+			<td>
+				<img src="logo-er.png" alt="CBer">
+			</td> 
 		</tr>
 	</table>
 	
