--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 				<img src="logo-er.png" alt="CBer">
 			</td> 
 		</tr>
+		
+		<tr>
+			<td>
+				<img src="cip.png" alt="CIP DLL">
+			</td> 
+		</tr>
 	</table>
 	
 </body>
