--- a/index.html
+++ b/index.html
@@ -6,33 +6,15 @@
 </head>
 <body>
 	<table>
-		<tr>
-			<td>
-				<img src="grcl.png" alt="Geral">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<img src="grcl2.png" alt="Geral">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<img src="jsgi.png" alt="Solange">
-			</td> 
-		</tr>
+		<tr><td><img src="grcl.png" alt="Geral"></td></tr>
 		
-		<tr>
-			<td>
-				<img src="logo-er.png" alt="CBer">
-			</td> 
-		</tr>
+		<tr><td><img src="grcl2.png" alt="Geral"></td></tr>
 		
-		<tr>
-			<td>
-				<img src="cip.png" alt="CIP DLL">
-			</td> 
-		</tr>
+		<tr><td><img src="jsgi.png" alt="Solange"></td></tr>
+		
+		<tr><td><img src="logo-er.png" alt="CBer"></td></tr>
+		
+		<tr><td><img src="cip.png" alt="CIP DLL"></td></tr>
 	</table>
 	
 </body>
